# Font

./: .gitmodules  CMakeLists.txt  LICENSE  Link.bat  README.md
Resources/: font.frag.spv  font.vert.spv
Resources/Shaders/: Compile.bat  Font.frag  Font.frag.spv  Font.vert  Font.vert.spv
Resources/Shaders/Fonts2/: Font.frag.spv  Font.vert.spv  compile.bat
Scripts/: build-spirv.bat  link-resources.bat  link-resources.sh
Sources/: CMakeLists.txt  Cell.cpp  Cell.hpp  Font.rc  Geometry.cpp  Geometry.hpp  MainGame.cpp  MainRenderer.cpp  Outline.cpp  Outline.hpp
Sources/Font2/: RendererFonts2.cpp  RendererFonts2.hpp  main.cpp
Sources/Maths/: Vector2.cpp  Vector2.hpp
Sources/Scenes/: Scene1.cpp  Scene1.hpp
Sources/Uis/: OverlayDebug.hpp
Test/: CMakeLists.txt  Main.cpp  Main.hpp  Renderer.cpp  Renderer.hpp
